API database change which should be where we are all at for tomorrow. now it is dinner time i guess

--- a/ElevenNote.Api/Web.config
+++ b/ElevenNote.Api/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ElevenNote.Api-20150903043331.mdf;Initial Catalog=aspnet-ElevenNote.Api-20150903043331;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\Michael\Desktop\ElevenNote\ElevenNote.Web\ElevenNote.Web\App_Data\aspnet-ElevenNote.Web-20150831022433.mdf;Initial Catalog=aspnet-ElevenNote.Web-20150831022433;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
